--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
 
 </div>
 
-<script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+<script src="{{ url_for('static',filename='layui/jquery-3.3.1.min.js') }}"></script>
 <!-- 登出处理 -->
 {% block script %}
 
