--- a/templates/data_table/total_table.html
+++ b/templates/data_table/total_table.html
@@ -6,7 +6,7 @@
   <div class="layui-input-block">
     <label>数据日期</label>
     <div class="layui-inline">
-      <input type="text" class="layui-input" id="test1" lay-filter="laydate">
+      <input type="text" class="layui-input" id="test1" lay-filter="laydate" autocomplete="off">
     </div>
     <button class="layui-btn" lay-submit lay-filter="submit">查询</button>
     <button id="reset" class="layui-btn">重置</button>
