--- a/templates/data_table/city_table.html
+++ b/templates/data_table/city_table.html
@@ -55,7 +55,14 @@ layui.use(['layer','laydate','form','table'], function(){
 
   //日期选择器
   laydate.render({
-    elem: '#test1'
+    elem: '#test1',
+    calendar:true,
+    mark:{
+      "2021-01-11":"除夕",
+      "2021-01-12":"春节",
+      "2021-01-13":"初二",
+      "2021-01-14":"初三"
+    }
   });
   
   form.render("select");
