new function chart

--- a/templates/data_table/table_list.html
+++ b/templates/data_table/table_list.html
@@ -13,5 +13,7 @@
       </ul>
     </div>
 </div>
-
+<script type="text/javascript">
+  document.getElementById("table_list").className += " layui-bg-blue"
+</script>
 {% endblock item_list %}
