--- a/templates/data_table/city_table.html
+++ b/templates/data_table/city_table.html
@@ -132,7 +132,7 @@ layui.use(['layer','laydate','form','table'], function(){
       cols:[[
         {field:"city",title:"同城",width:100,fixed:"left"},
         {field:"film_center",title:"排片中心",width:100,fixed:"left"},
-        {field:"film",title:"影片",width:150,fixed:"left"},
+        {field:"film",title:"影片",width:150,fixed:"left",sort:true},
         {field:"session",title:"场次",width:100},
         {field:"session_percent",title:"场次占比%",width:120,sort:true},
         {field:"people",title:"人次",width:100},
