new function session_status_statistic

--- a/templates/data_table/table_list.html
+++ b/templates/data_table/table_list.html
@@ -10,6 +10,7 @@
         <li class="layui-nav-item"><a id="film_city" href="{{ url_for('city_table') }}">同城数据</a></li>
         <li class="layui-nav-item"><a id="film_cinema" href="{{ url_for('cinema_table') }}">影城数据</a></li>
         <li class="layui-nav-item"><a id="film_session_detail" href="{{ url_for('session_detail_table') }}">场次明细</a></li>
+        <li class="layui-nav-item"><a id="film_session_status" href="{{ url_for('session_status_statistic') }}">场次状态统计</a></li>
       </ul>
     </div>
 </div>
