--- a/templates/home.html
+++ b/templates/home.html
@@ -24,6 +24,7 @@
       <li class="layui-nav-item" id="chart_list"><a href="{{ url_for('chart_list')}}">预售走势</a></li>
     </ul>
     <ul class="layui-nav layui-layout-right">
+      <li class="layui-nav-item"><a>数据更新时间：{{ update_time }}</a></li>
       <li class="layui-nav-item">
         <a>{{ session.usermsg }}</a>
         <!-- <dl class="layui-nav-child">
