--- a/templates/data_table/city_table.html
+++ b/templates/data_table/city_table.html
@@ -129,17 +129,18 @@ layui.use(['layer','laydate','form','table'], function(){
       page:true,
       toolbar:true,
       defaultToolbar:["filter","exports"],
+      totalRow:true,
       cols:[[
         {field:"city",title:"同城",width:100,fixed:"left"},
         {field:"film_center",title:"排片中心",width:100,fixed:"left"},
-        {field:"film",title:"影片",width:150,fixed:"left",sort:true},
-        {field:"session",title:"场次",width:100},
+        {field:"film",title:"影片",width:150,fixed:"left",sort:true,totalRowText:"合计"},
+        {field:"session",title:"场次",width:100,totalRow:true},
         {field:"session_percent",title:"场次占比%",width:120,sort:true},
-        {field:"people",title:"人次",width:100},
+        {field:"people",title:"人次",width:100,totalRow:true},
         {field:"people_percent",title:"人次占比%",width:120,sort:true},
-        {field:"seats",title:"总座位数",width:100},
+        {field:"seats",title:"总座位数",width:100,totalRow:true},
         {field:"seats_percent",title:"排座占比%",width:120,sort:true},
-        {field:"bo",title:"票房",width:100},
+        {field:"bo",title:"票房",width:100,totalRow:true},
         {field:"bo_percent",title:"票房占比%",width:120,sort:true},
         {field:"jy_ratio",title:"金逸供需",width:100},
         {field:"arrange_film_effect",title:"排座效率",width:100},
