--- a/templates/presale_chart/film_center_chart.html
+++ b/templates/presale_chart/film_center_chart.html
@@ -4,7 +4,7 @@
 <!-- 内容主体区域 -->
 <div class="layui-form-item" lay-filter="test">
     <div class="layui-input-block">
-      <label>数据日期</label>
+      <label>预售日期</label>
       <div class="layui-inline">
         <input type="text" class="layui-input" id="test1" lay-filter="laydate" autocomplete="off">
       </div>
