--- a/templates/data_table/session_status_statistic.html
+++ b/templates/data_table/session_status_statistic.html
@@ -168,7 +168,7 @@ layui.use(['layer','laydate','form','table'], function(){
         {field:"cinema",title:"影城",width:150,fixed:"left"},
         {field:"city",title:"同城",width:100,fixed:"left"},
         {field:"film_center",title:"排片中心",width:100,fixed:"left"},
-        {field:"film",title:"影片",width:150,fixed:"left",sort:true,totalRowText:"合计"},
+        {field:"film",title:"影片",width:150,fixed:"left",totalRowText:"合计"},
         {field:"status_open",title:"已开启",width:100,sort:true,totalRow:true},
         {field:"status_plan",title:"已计划",width:100,sort:true,totalRow:true},
         {field:"status_approve",title:"已批准",width:100,sort:true,totalRow:true},
