--- a/templates/data_table/cinema_table.html
+++ b/templates/data_table/cinema_table.html
@@ -30,6 +30,12 @@
         <option value="">请选择</option>
       </select>
     </div>
+    <label>影片</label>
+    <div class="layui-inline layui-form" id="film_se">
+      <select name="film_val" id="film_val" lay-filter="film_film">
+        <option value="">请选择</option>
+      </select>
+    </div>
   </div>
 </div>
 <div>
@@ -54,6 +60,7 @@ layui.use(['layer','laydate','form','table'], function(){
   document.getElementById("center_val").value = "";
   document.getElementById("city_val").value = "";
   document.getElementById("cinema_val").value = "";
+  document.getElementById("film_val").value = "";
   form.render();
 }
   
@@ -68,12 +75,32 @@ layui.use(['layer','laydate','form','table'], function(){
       "2021-02-12":"春节",
       "2021-02-13":"初二",
       "2021-02-14":"初三"
+    },
+    //日期的影片列表
+    done:function(value){
+      if (value != ""){
+        $.ajax({
+          type:"get",
+          url:"/data/film/api?table=film_cinema&date=" + value,
+          dataType:"json",
+          success:function(d){
+            var filmlist = d.result;
+            var tmp = '<option value="">请选择</option>';
+            $("#film_val").html(tmp);
+            for (var film in filmlist){
+              tmp += '<option value="' + filmlist[film] + '">' + filmlist[film] + '</option>';
+            }
+            $("#film_val").html(tmp);
+            form.render();
+          },
+        });
+      }
     }
   });
 
   form.render("select");
 
-  //获取同城列表
+  //获取同城和排片中心影片列表
   form.on("select(film_center)",function(data){
     var center_val = data.value;
     console.log(center_val);
@@ -93,10 +120,28 @@ layui.use(['layer','laydate','form','table'], function(){
         form.render();
       },
     });
+    if (date != ""){
+      $.ajax({
+        type:"get",
+        url:"/data/film/api?table=film_cinema&date=" + date + "&area_field=film_center&area_value=" + center_val,
+        dataType:"json",
+        success:function(d){
+          var filmlist = d.result;
+          var tmp = '<option value="">请选择</option>';
+          $("#film_val").html(tmp);
+          for (var film in filmlist){
+            tmp += '<option value="' + filmlist[film] + '">' + filmlist[film] + '</option>';
+          }
+          $("#film_val").html(tmp);
+          form.render();
+        }
+      })
+    }
+
     }
   });
 
-  //获取影城列表
+  //获取影城列表和同城中心影片列表
   form.on("select(film_city)",function(data){
     var city_val = data.value;
     console.log(city_val);
@@ -117,6 +162,33 @@ layui.use(['layer','laydate','form','table'], function(){
       },
     });
     }
+    if (date != ""){
+      $.ajax({
+        type:"get",
+        url:"/data/film/api?table=film_cinema&date=" + date + "&area_field=city&area_value=" + city_val,
+        dataType:"json",
+        success:function(d){
+          var filmlist = d.result;
+          var tmp = '<option value="">请选择</option>';
+          $("#film_val").html(tmp);
+          for (var film in filmlist){
+            tmp += '<option value="' + filmlist[film] + '">' + filmlist[film] + '</option>';
+          }
+          $("#film_val").html(tmp);
+          form.render();
+        }
+      })
+    }
+  });
+
+  //若选择影城，清空影片列表
+  form.on("select(film_cinema)",function(data){
+    var cinema = data.value;
+    if (cinema != ""){
+      var tmp = '<option value="">请选择</option>';
+      $("#film_val").html(tmp);
+      form.render();
+    }
   });
 
   form.on('submit(submit)',function(){
@@ -128,20 +200,22 @@ layui.use(['layer','laydate','form','table'], function(){
     var city_val = select2.value;
     var select3 = document.getElementById("cinema_val");
     var cinema_val = select3.value;
+    var select4 = document.getElementById("film_val");
+    var film_val = select4.value;
 
     // 接口url选择
     var data_url;
     if (cinema_val == ""){
-      data_url = "/data/api?table=film_cinema&area_field=city&area_value=" + city_val + "&date=" + date1;
+      data_url = "/data/api?table=film_cinema&area_field=city&area_value=" + city_val + "&date=" + date1 + "&film=" + film_val;
     }
     else if (city_val == ""){
-      data_url = "/data/api?table=film_cinema&area_field=film_center&area_value=" + center_val + "&date=" + date1;
+      data_url = "/data/api?table=film_cinema&area_field=film_center&area_value=" + center_val + "&date=" + date1 + "&film=" + film_val;
     }
     else if (center_val == ""){
-      data_url = "/data/api?table=film_cinema&date=" + date1;
+      data_url = "/data/api?table=film_cinema&date=" + date1 + "&film=" + film_val;
     }
     else{
-      data_url = "/data/api?table=film_cinema&area_field=cinema&area_value=" + cinema_val + "&date=" + date1;
+      data_url = "/data/api?table=film_cinema&area_field=cinema&area_value=" + cinema_val + "&date=" + date1 + "&film=" + film_val;
     }
 
     //渲染表格
@@ -168,14 +242,14 @@ layui.use(['layer','laydate','form','table'], function(){
         {field:"cinema",title:"影城",width:150,fixed:"left"},
         {field:"city",title:"同城",width:100,fixed:"left"},
         {field:"film_center",title:"排片中心",width:100,fixed:"left"},
-        {field:"film",title:"影片",width:150,fixed:"left",sort:true,totalRowText:"合计"},
-        {field:"session",title:"场次",width:100,totalRow:true},
+        {field:"film",title:"影片",width:150,fixed:"left",totalRowText:"合计"},
+        {field:"session",title:"场次",width:100,sort:true,totalRow:true},
         {field:"session_percent",title:"场次占比%",width:120,sort:true},
-        {field:"people",title:"人次",width:100,totalRow:true},
+        {field:"people",title:"人次",width:100,sort:true,totalRow:true},
         {field:"people_percent",title:"人次占比%",width:120,sort:true},
-        {field:"seats",title:"总座位数",width:100,totalRow:true},
+        {field:"seats",title:"总座位数",width:100,sort:true,totalRow:true},
         {field:"seats_percent",title:"排座占比%",width:120,sort:true},
-        {field:"bo",title:"票房",width:100,totalRow:true},
+        {field:"bo",title:"票房",width:100,sort:true,totalRow:true},
         {field:"bo_percent",title:"票房占比%",width:120,sort:true},
         {field:"jy_ratio",title:"金逸供需",width:100},
         {field:"arrange_film_effect",title:"排座效率",width:100},
