--- a/templates/data_table/table_list.html
+++ b/templates/data_table/table_list.html
@@ -11,10 +11,23 @@
         <li class="layui-nav-item"><a id="film_cinema" href="{{ url_for('cinema_table') }}">影城数据</a></li>
         <li class="layui-nav-item"><a id="film_session_detail" href="{{ url_for('session_detail_table') }}">场次明细</a></li>
         <li class="layui-nav-item"><a id="film_session_status" href="{{ url_for('session_status_statistic') }}">场次状态统计</a></li>
+        <li class="layui-nav-item">
+          <a id="red_film_query" href="javascript:;">红片查询</a>
+          <dl class="layui-nav-child">
+            <dd><a id="red_film_data" href="{{ url_for('red_film_table') }}">红片场次统计</a></dd>
+            <dd><a id="red_film_abormal_session" href="{{ url_for('red_film_abnormal') }}">红片异常场次</a></dd>
+          </dl>
+        </li>
       </ul>
     </div>
 </div>
 <script type="text/javascript">
   document.getElementById("table_list").className += " layui-bg-blue"
+</script>
+<script src="{{ url_for('static', filename='layui/layui.js') }}"></script>
+<script>
+    layui.use(["element"],function(){
+    var element = layui.element;
+  });
 </script>
 {% endblock item_list %}
