场次状态统计添加影片筛选

--- a/templates/data_table/cinema_table.html
+++ b/templates/data_table/cinema_table.html
@@ -207,17 +207,17 @@ layui.use(['layer','laydate','form','table'], function(){
 
     // 接口url选择
     var data_url;
-    if (cinema_val == ""){
-      data_url = "/data/api?table=film_cinema&area_field=city&area_value=" + city_val + "&date=" + date1 + "&film=" + film_val;
-    }
-    else if (city_val == ""){
+    if(center_val != ""){
       data_url = "/data/api?table=film_cinema&area_field=film_center&area_value=" + center_val + "&date=" + date1 + "&film=" + film_val;
-    }
-    else if (center_val == ""){
-      data_url = "/data/api?table=film_cinema&date=" + date1 + "&film=" + film_val;
+      if(city_val != ""){
+        data_url = "/data/api?table=film_cinema&area_field=city&area_value=" + city_val + "&date=" + date1 + "&film=" + film_val;
+        if(cinema_val != ""){
+          data_url = "/data/api?table=film_cinema&area_field=cinema&area_value=" + cinema_val + "&date=" + date1 + "&film=" + film_val;
+        }
+      }
     }
     else{
-      data_url = "/data/api?table=film_cinema&area_field=cinema&area_value=" + cinema_val + "&date=" + date1 + "&film=" + film_val;
+      data_url = "/data/api?table=film_cinema&date=" + date1 + "&film=" + film_val;
     }
 
     //渲染表格
