--- a/templates/data_table/table_list.html
+++ b/templates/data_table/table_list.html
@@ -11,6 +11,7 @@
         <li class="layui-nav-item"><a id="film_cinema" href="{{ url_for('cinema_table') }}">影城数据</a></li>
         <li class="layui-nav-item"><a id="film_session_detail" href="{{ url_for('session_detail_table') }}">场次明细</a></li>
         <li class="layui-nav-item"><a id="film_session_status" href="{{ url_for('session_status_statistic') }}">场次状态统计</a></li>
+        <li class="layui-nav-item"><a id="not_open_film_cinema" href="{{ url_for('not_open_film_cinema') }}">影城未开售影片</a></li>
         <li class="layui-nav-item">
           <a id="red_film_query" href="javascript:;">红片查询</a>
           <dl class="layui-nav-child">
