增加影城影片票房预测功能

--- a/templates/home.html
+++ b/templates/home.html
@@ -22,6 +22,7 @@
     <ul class="layui-nav layui-layout-left">
       <li class="layui-nav-item" id="table_list"><a href="{{ url_for('table_list')}}">数据报表</a></li>
       <li class="layui-nav-item" id="chart_list"><a href="{{ url_for('chart_list')}}">预售走势</a></li>
+      <li class="layui-nav-item" id="predict_list"><a href="{{ url_for('predict_list') }}">票房预测</a></li>
     </ul>
     <ul class="layui-nav layui-layout-right">
       <li class="layui-nav-item"><a>数据更新时间：{{ update_time }}</a></li>
