--- a/templates/admin/data_table/table_list.html
+++ b/templates/admin/data_table/table_list.html
@@ -12,13 +12,14 @@
         <li class="layui-nav-item"><a id="film_session_detail" href="{{ url_for('admin.session_detail_table') }}">场次明细</a></li>
         <li class="layui-nav-item"><a id="film_session_status" href="{{ url_for('admin.session_status_statistic') }}">场次状态统计</a></li>
         <li class="layui-nav-item"><a id="not_open_film_cinema" href="{{ url_for('admin.not_open_film_cinema') }}">影城未排影片</a></li>
-        <li class="layui-nav-item">
+        <li class="layui-nav-item"><a id="maoyan_presale_price" href="{{ url_for('admin.maoyan_presale_price') }}">猫眼预售票价</a></li>
+        <!-- <li class="layui-nav-item">
           <a id="red_film_query" href="javascript:;">红片查询</a>
           <dl class="layui-nav-child">
             <dd><a id="red_film_data" href="{{ url_for('admin.red_film_table') }}">红片场次统计</a></dd>
             <dd><a id="red_film_abormal_session" href="{{ url_for('admin.red_film_abnormal') }}">红片异常场次</a></dd>
           </dl>
-        </li>
+        </li> -->
       </ul>
     </div>
 </div>
