--- a/templates/city/data_table/table_list.html
+++ b/templates/city/data_table/table_list.html
@@ -10,6 +10,7 @@
         <li class="layui-nav-item"><a id="film_session_detail" href="{{ url_for('city.session_detail_table') }}">场次明细</a></li>
         <li class="layui-nav-item"><a id="film_session_status" href="{{ url_for('city.session_status_statistic') }}">场次状态统计</a></li>
         <li class="layui-nav-item"><a id="not_open_film_cinema" href="{{ url_for('city.not_open_film_cinema') }}">影城未排影片</a></li>
+        <li class="layui-nav-item"><a id="maoyan_presale_price" href="{{ url_for('city.maoyan_presale_price') }}">猫眼预售票价</a></li>
       </ul>
     </div>
 </div>
