--- a/templates/admin/data_table/film_feature_check.html
+++ b/templates/admin/data_table/film_feature_check.html
@@ -30,29 +30,6 @@
         <option value="">请选择</option>
       </select>
     </div>
-    <label>影片</label>
-    <div class="layui-inline layui-form" id="film_se">
-      <select name="film_val" id="film_val" lay-filter="film_film">
-        <option value="">请选择</option>
-      </select>
-    </div>
-    <label>竞对关系</label>
-    <div class="layui-inline layui-form" id="compete_se">
-      <select name="compete_val" id="compete_val" lay-filter="film_compete">
-        <option value="">请选择</option>
-        <option value="直营">直营</option>
-        <option value="竞对">竞对</option>
-      </select>
-    </div>
-    <label>开始时间</label>
-    <div class="layui-inline layui-form">
-        <input type="text" class="layui-input" id="test2" lay-filter="laydate" autocomplete="off">
-    </div>
-    <div class="layui-inline">-</div>
-    <label>结束时间</label>
-    <div class="layui-inline layui-form">
-        <input type="text" class="layui-input" id="test3" lay-filter="laydate" autocomplete="off">
-    </div>
   </div>
 </div>
 <div>
@@ -77,15 +54,11 @@ layui.use(['layer','laydate','form','table'], function(){
   document.getElementById("center_val").value = "";
   document.getElementById("city_val").value = "";
   document.getElementById("cinema_val").value = "";
-  document.getElementById("film_val").value = "";
-  document.getElementById("compet_val").value = "";
-  document.getElementById("test2").value = "";
-  document.getElementById("test3").value = "";
   form.render();
 }
   
   //导航选择高亮
-  document.getElementById("maoyan_presale_price").parentElement.className += " layui-bg-green";
+  document.getElementById("film_feature_check").parentElement.className += " layui-bg-green";
 
   laydate.render({
     elem: '#test1',
@@ -100,36 +73,6 @@ layui.use(['layer','laydate','form','table'], function(){
       "2022-02-02":"初二",
       "2022-02-03":"初三"
     },
-    //日期的影片列表
-    done:function(value){
-      if (value != ""){
-        $.ajax({
-          type:"get",
-          url:"/data/film/api?table=film_cinema&date=" + value,
-          dataType:"json",
-          success:function(d){
-            var filmlist = d.result;
-            var tmp = '<option value="">请选择</option>';
-            $("#film_val").html(tmp);
-            for (var film in filmlist){
-              tmp += '<option value="' + filmlist[film] + '">' + filmlist[film] + '</option>';
-            }
-            $("#film_val").html(tmp);
-            form.render();
-          },
-        });
-      }
-    }
-  });
-
-  laydate.render({
-      elem:"#test2",
-      type:"time"
-  });
-
-  laydate.render({
-      elem:"#test3",
-      type:"time"
   });
 
   form.render("select");
@@ -155,6 +98,7 @@ layui.use(['layer','laydate','form','table'], function(){
         form.render();
       },
     });
+
     }
   });
 
@@ -182,26 +126,13 @@ layui.use(['layer','laydate','form','table'], function(){
     }
   });
 
-  //获取影片列表
+  //若选择影城，清空影片列表
   form.on("select(film_cinema)",function(data){
-    var cinema_val = data.value;
-    var date = document.getElementById("test1").value;
-    if (cinema_val != ""){
-      $.ajax({
-        type:"get",
-        url:"/data/film/api?table=maoyan_presale_price&date=" + date + "&area_field=cinema&area_value=" + cinema_val,
-        dataType:"json",
-        success:function(d){
-          var filmlist = d.result;
-          var tmp = '<option value="">请选择</option>';
-          $("film_val").html(tmp);
-          for (var film in filmlist){
-            tmp += '<option value="' + filmlist[film] + '">' + filmlist[film] + '</option>';
-          }
-          $("#film_val").html(tmp);
-          form.render();
-        },
-      });
+    var cinema = data.value;
+    if (cinema != ""){
+      var tmp = '<option value="">请选择</option>';
+      $("#film_val").html(tmp);
+      form.render();
     }
   });
 
@@ -214,19 +145,21 @@ layui.use(['layer','laydate','form','table'], function(){
     var city_val = select2.value;
     var select3 = document.getElementById("cinema_val");
     var cinema_val = select3.value;
-    var select4 = document.getElementById("film_val");
-    var movie_name = select4.value;
-    var select5 = document.getElementById("compete_val");
-    var compete_val = select5.value;
-    var select6 = document.getElementById("test2");
-    var time1 = select6.value;
-    var select7 = document.getElementById("test3");
-    var time2 = select7.value;
 
     // 接口url选择
     var data_url;
-    data_url = "/data/my_presale/api?table=maoyan_presale_price&area_field=cinema&area_value=" + cinema_val + "&show_date=" + date1 +"&movie_name=" + movie_name 
-    + "&compete_relation=" + compete_val + "&begin_time=" + time1 + "&end_time=" + time2
+    if(center_val != ""){
+      data_url = "/data/film_feat/api?table=film_feature_check&area_field=film_center&area_value=" + center_val + "&date=" + date1;
+      if(city_val != ""){
+        data_url = "/data/film_feat/api?table=film_feature_check&area_field=city&area_value=" + city_val + "&date=" + date1;
+        if(cinema_val != ""){
+          data_url = "/data/film_feat/api?table=film_feature_check&area_field=cinema&area_value=" + cinema_val + "&date=" + date1;
+        }
+      }
+    }
+    else{
+      data_url = "/data/film_feat/api?table=film_feature_check&date=" + date1;
+    }
 
     //渲染表格
     table.render({
@@ -249,19 +182,19 @@ layui.use(['layer','laydate','form','table'], function(){
       defaultToolbar:["filter","exports"],
       totalRow:true,
       cols:[[
-        {field:"jycinema_name",title:"直营影城",width:150,fixed:"left"},
-        {field:"compete_cinema_name",title:"竞对影城",width:150,fixed:"left"},
-        {field:"compete_relation",title:"竞对关系",width:110,fixed:"left"},
+        {field:"cinema",title:"影城",width:150,fixed:"left"},
         {field:"city",title:"同城",width:100,fixed:"left"},
         {field:"film_center",title:"排片中心",width:100,fixed:"left"},
-        {field:"movie_name",title:"影片",width:150},
-        {field:"show_date",title:"预售日期",width:120},
-        {field:"show_time",title:"场次时间",sort:true,width:110},
-        {field:"price",title:"预售票价",sort:true,width:110},
-        {field:"sold_count",title:"购票人数",width:100},
-        {field:"hall_name",title:"影厅名",width:150},
-        {field:"seats",title:"座位数",width:80},
-        {field:"version",title:"影片制式",width:100},
+        {field:"cinema_hall",title:"影厅",width:150,fixed:"left"},
+        {field:"film",title:"影片",width:200,fixed:"left"},
+        {field:"film_feature",title:"影片特征",width:150},
+        {field:"session_status",title:"开场状态",width:100},
+        {field:"session_time",title:"场次时间",sort:true,width:110},
+        {field:"people",title:"人次",width:100},
+        {field:"bo",title:"票房",width:100},
+        {field:"seats",title:"座位数",width:100},
+        {field:"occupancy",title:"上座率",width:100},
+        {field:"op_date",title:"票房日期",width:120}
       ]],
 
     });
