--- a/templates/admin/data_table/table_list.html
+++ b/templates/admin/data_table/table_list.html
@@ -14,13 +14,13 @@
         <li class="layui-nav-item"><a id="not_open_film_cinema" href="{{ url_for('admin.not_open_film_cinema') }}">影城未排影片</a></li>
         <li class="layui-nav-item"><a id="film_feature_check" href="{{ url_for('admin.film_feature_check') }}">影片特征检查</a></li>
         <li class="layui-nav-item"><a id="maoyan_presale_price" href="{{ url_for('admin.maoyan_presale_price') }}">猫眼预售票价</a></li>
-        <!-- <li class="layui-nav-item">
+        <li class="layui-nav-item">
           <a id="red_film_query" href="javascript:;">红片查询</a>
           <dl class="layui-nav-child">
             <dd><a id="red_film_data" href="{{ url_for('admin.red_film_table') }}">红片场次统计</a></dd>
             <dd><a id="red_film_abormal_session" href="{{ url_for('admin.red_film_abnormal') }}">红片异常场次</a></dd>
           </dl>
-        </li> -->
+        </li>
       </ul>
     </div>
 </div>
